[annotation] - add automated resource loading of icon-images

--- a/plugin-annotation/scripts/annotation_manager_unit_test.junit.ejs
+++ b/plugin-annotation/scripts/annotation_manager_unit_test.junit.ejs
@@ -58,7 +58,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testInitialization() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     verify(style).addSource(geoJsonSource);
     verify(style).addLayer(<%- type  %>Layer);
     assertTrue(<%- type  %>Manager.dataDrivenPropertyUsageMap.size() > 0);
@@ -73,7 +73,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testInitializationOnStyleReload() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     verify(style).addSource(geoJsonSource);
     verify(style).addLayer(<%- type  %>Layer);
     assertTrue(<%- type  %>Manager.dataDrivenPropertyUsageMap.size() > 0);
@@ -116,7 +116,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testLayerBelowInitialization() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, "test_layer", null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, "test_layer", null, draggableAnnotationController, null);
     verify(style).addSource(geoJsonSource);
     verify(style).addLayerBelow(<%- type  %>Layer, "test_layer");
     assertTrue(<%- type  %>Manager.dataDrivenPropertyUsageMap.size() > 0);
@@ -130,7 +130,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testGeoJsonOptionsInitialization() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, geoJsonOptions, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, geoJsonOptions, draggableAnnotationController, null);
     verify(style).addSource(optionedGeoJsonSource);
     verify(style).addLayer(<%- type  %>Layer);
     assertTrue(<%- type  %>Manager.dataDrivenPropertyUsageMap.size() > 0);
@@ -145,7 +145,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testNoUpdateOnStyleReload() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, "test_layer", null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, "test_layer", null, draggableAnnotationController, null);
     verify(geoJsonSource, times(1)).setGeoJson(any(FeatureCollection.class));
 
     when(style.isFullyLoaded()).thenReturn(false);
@@ -155,7 +155,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testAdd<%- camelize(type) %>() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %> <%- type %> = <%- type %>Manager.create(new <%- camelize(type) %>Options().withLatLng(new LatLng()));
 <% } else if (type === "line") { -%>
@@ -178,7 +178,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void add<%- camelize(type) %>FromFeatureCollection() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     Geometry geometry = Point.fromLngLat(10, 10);
 <% } else if (type === "line") { -%>
@@ -237,7 +237,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void add<%- camelize(type) %>s() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     List<LatLng> latLngList = new ArrayList<>();
     latLngList.add(new LatLng());
@@ -297,7 +297,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testDelete<%- camelize(type) %>() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %> <%- type %> = <%- type %>Manager.create(new <%- camelize(type) %>Options().withLatLng(new LatLng()));
 <% } else if (type === "line") { -%>
@@ -320,7 +320,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testGeometry<%- camelize(type) %>() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     LatLng latLng = new LatLng(12, 34);
     <%- camelize(type) %>Options options = new <%- camelize(type) %>Options().withLatLng(latLng);
@@ -375,7 +375,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testFeatureId<%- camelize(type) %>() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %> <%- type %>Zero = <%- type %>Manager.create(new <%- camelize(type) %>Options().withLatLng(new LatLng()));
     <%- camelize(type) %> <%- type %>One = <%- type %>Manager.create(new <%- camelize(type) %>Options().withLatLng(new LatLng()));
@@ -401,7 +401,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void test<%- camelize(type) %>DraggableFlag() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %> <%- type %>Zero = <%- type %>Manager.create(new <%- camelize(type) %>Options().withLatLng(new LatLng()));
 <% } else if (type === "line") { -%>
@@ -431,7 +431,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void test<%- camelize(property.name) %>LayerProperty() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     verify(<%- type  %>Layer, times(0)).setProperties(argThat(new PropertyValueMatcher(<%- camelizeWithLeadingLowercase(property.name) %>(get("<%- property.name %>")))));
 
 <% if (type === "circle" || type === "symbol") { -%>
@@ -461,7 +461,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void test<%- camelize(type) %>LayerFilter() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     Expression expression = Expression.eq(Expression.get("test"), "selected");
     verify(<%- type %>Layer, times(0)).setFilter(expression);
 
@@ -476,7 +476,7 @@ public class <%- camelize(type) %>ManagerTest {
   @Test
   public void testClickListener() {
     On<%- camelize(type) %>ClickListener listener = mock(On<%- camelize(type) %>ClickListener.class);
-    <%- type  %>Manager = new  <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new  <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     assertTrue(<%- type  %>Manager.getClickListeners().isEmpty());
     <%- type  %>Manager.addClickListener(listener);
     assertTrue(<%- type  %>Manager.getClickListeners().contains(listener));
@@ -487,7 +487,7 @@ public class <%- camelize(type) %>ManagerTest {
   @Test
   public void testLongClickListener() {
     On<%- camelize(type) %>LongClickListener listener = mock(On<%- camelize(type) %>LongClickListener.class);
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     assertTrue(<%- type  %>Manager.getLongClickListeners().isEmpty());
     <%- type  %>Manager.addLongClickListener(listener);
     assertTrue(<%- type  %>Manager.getLongClickListeners().contains(listener));
@@ -498,7 +498,7 @@ public class <%- camelize(type) %>ManagerTest {
   @Test
   public void testDragListener() {
     On<%- camelize(type) %>DragListener listener = mock(On<%- camelize(type) %>DragListener.class);
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
     assertTrue(<%- type  %>Manager.getDragListeners().isEmpty());
     <%- type  %>Manager.addDragListener(listener);
     assertTrue(<%- type  %>Manager.getDragListeners().contains(listener));
@@ -508,7 +508,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testCustomData() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %>Options options = new <%- camelize(type) %>Options().withLatLng(new LatLng());
 <% } else if (type === "line") { -%>
@@ -532,7 +532,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testClearAll() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %>Options options = new <%- camelize(type) %>Options().withLatLng(new LatLng());
 <% } else if (type === "line") { -%>
@@ -557,7 +557,7 @@ public class <%- camelize(type) %>ManagerTest {
 
   @Test
   public void testIgnoreClearedAnnotations() {
-    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController);
+    <%- type  %>Manager = new <%- camelize(type) %>Manager(mapView, mapboxMap, style, coreElementProvider, null, null, draggableAnnotationController, null);
 <% if (type === "circle" || type === "symbol") { -%>
     <%- camelize(type) %>Options options = new <%- camelize(type) %>Options().withLatLng(new LatLng());
 <% } else if (type === "line") { -%>
